# Cargo.toml

[package]
name = "rusty_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"                          # Compiler doesn't know that we are writing to VGA buffer and make omit these writes as optimization, this tells compilers that it should not be optimized
spin = "0.5.2"                              # Simple spinlocks because we don't have access to std::sync::Mutex
x86_64 = "0.14.2"                           # Provides x86_64 specific functions, like accessing ports.
uart_16550 = "0.2.0"                        # UART 16550 crate provides a driver for the UART 16550 serial port

[dependencies.lazy_static]                  # Lazy static is a crate that allows us to create static variables that are initialized at runtime
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]                # Defines the io port through which the device can be reached from our kernel
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33                 # Exit code that QEMU uses to indicate success
test-timeout = 300                          # Timeout for the test

[[test]]
name = "should_panic"
harness = false